# clipengine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  skills-lock.json
.cursor/rules/: conventional-commits.mdc
.github/: DOCUMENTATION_PROJECT.md  dependabot.yml
.github/workflows/: ci.yml  lint-pr-title.yml
apps/api/: README.md  pyproject.toml
apps/api/clipengine_api/: __init__.py  main.py  passwords.py  worker.py
apps/api/clipengine_api/core/: __init__.py  db.py  env.py  llm_profiles.py  llm_status.py
apps/api/clipengine_api/routers/: catalog.py  google_drive.py  notifications.py  runs.py  s3.py  settings.py  smb.py  storage_bind.py  youtube.py
apps/api/clipengine_api/services/: __init__.py  catalog_sync.py  docker_worker.py  google_drive.py  live_autoclip.py  live_capture.py  local_bind_output.py  pipeline_execute.py  pipeline_restart.py  pipeline_runner.py  publish_metadata.py  s3_client.py  s3_output.py  smb_output.py  subtitle_settings.py  telegram_notifications.py  temp_retention.py  workspace.py  youtube_upload.py
apps/api/clipengine_api/storage/: __init__.py  catalog_db.py  runs_db.py
apps/web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/automation/: page.tsx
apps/web/src/app/(dashboard)/catalog/: page.tsx
apps/web/src/app/(dashboard)/help/: page.tsx
apps/web/src/app/(dashboard)/import/: page.tsx
apps/web/src/app/(dashboard)/runs/: page.tsx
apps/web/src/app/(dashboard)/runs/[id]/: page.tsx
apps/web/src/app/(dashboard)/settings/: page.tsx
apps/web/src/app/(dashboard)/settings/subtitles/: page.tsx
apps/web/src/app/api-engine/[...path]/: route.ts
apps/web/src/app/setup/: page.tsx  setup-form.tsx  setup-preflight.tsx
apps/web/src/components/: app-shell.tsx  processing-banner.tsx
apps/web/src/components/automation/: automation-overview.tsx
apps/web/src/components/catalog/: catalog-panel.tsx
apps/web/src/components/dashboard/: dashboard-home.tsx  workflow-overview.tsx
apps/web/src/components/help/: bind-mounts-tutorial.tsx  copy-block.tsx  help-content.tsx  quick-reference-tabs.tsx
apps/web/src/components/import/: import-wizard.tsx
apps/web/src/components/layout/: page-header.tsx
apps/web/src/components/runs/: live-runs-table.tsx  mini-pipeline-rail.tsx  pipeline-progress-block.tsx  pipeline-tracker.tsx  run-detail.tsx  run-status-badge.tsx  runs-feed.tsx
apps/web/src/components/settings/: google-drive-settings-card.tsx  local-bind-settings-card.tsx  publishing-settings-card.tsx  s3-settings-card.tsx  search-settings-card.tsx  settings-form.tsx  smb-settings-card.tsx  subtitles-settings-form.tsx  telegram-notifications-card.tsx  youtube-settings-card.tsx
apps/web/src/components/ui/: confirm-alert-dialog.tsx
apps/web/src/content/: sidebar-tips.ts
apps/web/src/lib/: api.ts  dashboard-content.ts  output-destination.ts  pipeline-status.test.ts  pipeline-status.ts  pipeline-visual.ts  runs-api.ts  server-fetch.ts
apps/web/src/types/: run.ts
docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: architecture.md  bind-mounts.md  commands.md  configuration.md  docker.md  pipeline.md  repo-layout.md  youtube-live.md
scripts/: dev.sh
skills/frontend-design/: README.md
src/clip_engine/: __init__.py  __main__.py  cli.py  ffmpeg_ops.py  llm.py  models.py  render.py  segment_snap.py  tavily_client.py  transcribe.py  vtt.py
src/clipengine/: __init__.py  config.py  models.py  pipeline.py
src/clipengine/ingest/: __init__.py  assemblyai_transcribe.py  audio.py  openai_transcribe.py  transcribe.py
src/clipengine/plan/: __init__.py  heuristic.py  llm.py  llm_constants.py  search.py  snap.py
src/clipengine/plan/search_providers/: README.md  __init__.py  _format.py  brave.py  duckduckgo.py  exa.py  firecrawl.py  gemini.py  grok.py  kimi.py  minimax.py  ollama_web.py  perplexity.py  registry.py  searxng.py  tavily.py
src/clipengine/render/: __init__.py  ffmpeg.py  subtitles.py
tests/: test_audio_streams_probe.py  test_catalog_db.py  test_config.py  test_docker_workers.py  test_duckduckgo_instant_answer.py  test_duckduckgo_search.py  test_env_pipeline.py  test_google_drive.py  test_heuristic_plan.py  test_llm_helpers.py  test_llm_profiles_normalize.py  test_models.py  test_passwords.py  test_pipeline_restart.py  test_publish_metadata.py  test_runs_db.py  test_runs_extra.py  test_s3_output.py  test_search_format.py  test_search_providers_registry.py  test_search_registry_extended.py  test_search_registry_fallback.py  test_settings_validation.py  test_smoke.py  test_snap.py  test_storage_bind.py  test_subtitles_ass.py  test_temp_retention.py  test_workspace.py  test_youtube_upload.py
