[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-engine"
version = "0.1.0"
description = "Smart CLI: episode video to longform/shortform clips (Whisper + LLM + FFmpeg)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["video", "clips", "whisper", "llm", "ffmpeg", "shorts", "transcription"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
    "faster-whisper>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/bintangtimurlangit/clipengine"
Repository = "https://github.com/bintangtimurlangit/clipengine"
Issues = "https://github.com/bintangtimurlangit/clipengine/issues"

[project.scripts]
clip-engine = "clip_engine.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
