[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipengine"
version = "0.1.0"
description = "Episode video to longform/shortform clips (Whisper + LLM + FFmpeg); Web UI + API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["video", "clips", "whisper", "llm", "ffmpeg", "shorts", "transcription"]
dependencies = [
    "rich>=13.0.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0.0",
    "pydantic>=2.0.0",
    "faster-whisper>=1.2.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/bintangtimurlangit/clipengine"
Repository = "https://github.com/bintangtimurlangit/clipengine"
Issues = "https://github.com/bintangtimurlangit/clipengine/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "apps/api"]
